Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-3974

Using clang-3.8 and ThreadSanitizer on the concurrency_test claims bad PThread behavior

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.9.3, 0.10.0
    • 0.11.0
    • C++ - Library
    • None

    Description

      After using ThreadSanitizer to prove THRIFT-2755 is no longer present after THRIFT-3932 was completed, it looks like there are some issues in the PThreadThread class, specifically that the destructor calls a virtual method. ThreadSanitizer picks calls this out (many, many times).

      The usage may be correct, but since we're not using C++11 we cannot seal the class (mark it with the final keyword) which would tell ThreadSanitizer nothing can inherit from the class, making that behavior safe.

      Another way to deal with this is to move the join implementation to a non-virtual method and have both the dtor and join() call it.

      Attachments

        Issue Links

          Activity

            People

              jking3 James E. King III
              jking3 James E. King III
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: