THRIFT-3974: fix ThreadSanitizer identified issues